# gramine-sealing-key-provider

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  gramine-sealing-key-provider.manifest.template  test_client.py
quotes/: tdxQuote2.txt
src/: error.rs  main.rs  server.rs
src/crypto/: keys.rs  mod.rs
src/gramine/: interface.rs  mod.rs
src/quote/: handler.rs  mod.rs
