[package]
name = "gramine-sealing-key-provider"
version = "0.1.0"
edition = "2021"

[features]
dev-mode = []

[dependencies]
dcap-qvl = "0.1.5"
base64 = "0.22.1"
sha2 = "0.10"
thiserror = "2.0.3"
hex = "0.4.3"
log = "0.4.22"
env_logger = "0.11.5"
tokio = { version = "1.41", features = ["rt", "macros"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
